tests/custom/STARIS_2022/operation-type-errors/product-type-error-01/stderr.expected
Error:
    product-type-error.essence:2:23:
  |
2 | such that i = product(5)
  |                       ^
Type error:
	Expected: matrix or set
	Got: int

